# Nelvra

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-tests.yml  docker-build.yml  sdk-tests.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: config.py  database.py  dependencies.py  exceptions.py  main.py  redis_client.py  tasks.py
backend/api/models/: __init__.py  alert.py  api_key.py  audit_log.py  base.py  llm_event.py  project.py  prompt.py  subscription.py  team_member.py  user.py
backend/api/routers/: alerts.py  analytics.py  auth.py  billing.py  events.py  export.py  projects.py  prompts.py  teams.py
backend/api/schemas/: alerts.py  auth.py  (+7 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_alerts.py  test_analytics.py  test_api_keys.py  test_billing.py  test_events.py  test_export.py  test_projects.py  test_prompts.py  test_teams.py  test_workers.py
backend/workers/: alert_dispatcher.py  celery_app.py  drift_detector.py  prompt_optimizer.py  quality_evaluator.py
frontend/: .env.local.example  Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
infra/terraform/: ecs.tf  elasticache.tf  main.tf  outputs.tf  rds.tf  variables.tf
sdks/javascript/: package.json  tsconfig.json
sdks/python/: pyproject.toml
sdks/python/nelvra/: __init__.py  client.py  types.py
sdks/python/nelvra/instruments/: anthropic.py  openai.py
sdks/python/tests/: conftest.py  test_client.py  test_instruments.py
(+56 files in other folders)
